kubernetes/apps/prometheus-and-grafana/expose-monitoring.yaml
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: Gateway
# metadata:
#   name: grafana-gateway
#   namespace: istio-system
# spec:
#   selector:
#     istio: ingressgateway # use istio default controller
#   servers:
#   - port:
#       number: 80
#       name: http
#       protocol: HTTP
#     hosts:
#     - "*"
# ---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: monitoring-vs
  namespace: istio-system
spec:
  hosts:
  - "my.dns.com"
  gateways:
  - cluster-local-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: grafana
        port: 
          number: 3000
