kubernetes/apps/prometheus-and-grafana/knative-prom-graf.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: knative-monitoring-gateway
  namespace: knative-monitoring
spec:
  selector:
    app.kubernetes.io/instance: ingress-nginx
  servers:
  - hosts:
    - "*"
    port:
      name: http-knative-services
      number: 80
      protocol: HTTP
---
apiVersion: networking.k8s.io/v1beta1
# Ingress
kind: Ingress
metadata:
  name: kfserving-ingress
  namespace: gke-system
  annotations:
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: istio-ingress
          servicePort: 80
---
kubectl apply -f - <<EOF
apiVersion: networking.k8s.io/v1beta1
# Ingress
kind: Ingress
metadata:
  name: monitoring-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # kubernetes.io/tls-acme: 'true'
    # nginx.ingress.kubernetes.io/tls-acme: 'true'
spec: 
  rules:
  - http:
      paths:
      - path: /grafana/
        backend:
          serviceName: grafana
          servicePort: 30802
        path: /prometheus/
        backend:
          serviceName: prometheus-system-np
          servicePort: 8080
EOF
---

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: grafana
  namespace: knative-serving
spec:
  host: grafana.knative-monitoring.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-virtual-service
  namespace: knative-serving
spec:
  hosts:
  - "*"
  gateways:
  - knative-ingress-gateway
  http:
  - match:
    - uri:
        prefix: /prometheus/
    rewrite:
      uri: /
    route:
    - destination:
        host: prometheus-system-np.knative-monitoring.svc.cluster.local
        port:
          name: http-knativeprometheus
          number: 8080
          protocol: HTTPcluster-local-gateway
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: prometheus
  namespace: knative-serving
spec:
  host: prometheus-system-np.knative-monitoring.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
